--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,45 +8,57 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geist+Sans:wght@700;800&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Lato', sans-serif;
-            background-color: #0A192F; /* Bałtycki Granat */
-            color: #FFFFFF; /* Czysta Biel */
+    <link href="https://fonts.googleapis.com/css2?family=Geist+Sans:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'baltic-navy': '#0A192F',
+                        'dark-steel': '#112240',
+                        'cyber-turq': '#64FFDA',
+                        'steel-gray': '#8892B0',
+                        'white': '#FFFFFF',
+                    },
+                    fontFamily: {
+                        sans: ['Lato', 'sans-serif'],
+                        heading:,
+                    }
+                }
+            }
         }
-        h1, h2, h3, h4, h5, h6 {
-            font-family: 'Geist Sans', sans-serif;
-        }
-       .bg-baltic-navy { background-color: #0A192F; }
-       .bg-dark-steel { background-color: #112240; }
-       .text-cyber-turq { color: #64FFDA; }
-       .bg-cyber-turq { background-color: #64FFDA; }
-       .border-cyber-turq { border-color: #64FFDA; }
-       .text-steel-gray { color: #8892B0; }
-    </style>
+    </script>
 </head>
-<body class="antialiased">
+<body class="antialiased bg-baltic-navy text-white font-sans">
 
     <header class="container mx-auto px-6 py-6 flex justify-between items-center">
         <div>
-            <a href="#" class="text-2xl font-bold">BDI</a>
+            <a href="#" aria-label="Strona główna Baltic Digital Institute">
+                <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
+                    <rect x="78" y="19" width="8" height="17" fill="#FFFFFF"/>
+                    <rect y="16" width="86" height="3" fill="#64FFDA"/>
+                    <rect x="78" y="5" width="8" height="8" fill="#64FFDA"/>
+                </svg>
+            </a>
         </div>
         <nav class="hidden md:flex space-x-8 items-center">
             <a href="#rozwiazania" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
             <a href="#o-nas" class="hover:text-cyber-turq transition-colors">O Nas</a>
             <a href="#kontakt" class="hover:text-cyber-turq transition-colors">Kontakt</a>
-            <a href="#formularz" class="border border-cyber-turq text-cyber-turq px-4 py-2 rounded hover:bg-cyber-turq hover:text-baltic-navy transition-colors">
+            <a href="#formularz" class="border border-cyber-turq text-cyber-turq px-4 py-2 rounded hover:bg-cyber-turq hover:text-baltic-navy transition-colors font-bold">
                 Skonsultuj Projekt
             </a>
         </nav>
         <div class="md:hidden">
-            <button>Menu</button>
+            <button class="text-white focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+            </button>
         </div>
     </header>
 
-    <main class="container mx-auto px-6 py-24 md:py-32 text-center">
-        <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">
+    <main class="container mx-auto px-6 pt-24 pb-16 md:pt-32 md:pb-24 text-center">
+        <h1 class="font-heading text-4xl md:text-6xl font-black leading-tight">
             Architekci Cyfrowej Odporności
         </h1>
         <p class="mt-6 max-w-3xl mx-auto text-lg md:text-xl text-steel-gray">
@@ -60,18 +72,36 @@
     </main>
 
     <div id="rozwiazania" class="h-96 flex items-center justify-center">
-        <h2 class="text-3xl font-bold text-steel-gray"></h2>
+        <h2 class="font-heading text-3xl font-bold text-steel-gray"></h2>
     </div>
     <div id="o-nas" class="h-96 flex items-center justify-center bg-dark-steel">
-        <h2 class="text-3xl font-bold text-steel-gray"></h2>
+        <h2 class="font-heading text-3xl font-bold text-steel-gray"></h2>
     </div>
     <div id="kontakt" class="h-96 flex items-center justify-center">
-        <h2 class="text-3xl font-bold text-steel-gray"></h2>
+        <h2 class="font-heading text-3xl font-bold text-steel-gray"></h2>
     </div>
-
-    <footer class="border-t border-gray-800 mt-20">
-        <div class="container mx-auto px-6 py-8 text-center text-steel-gray">
-            <p>&copy; 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
+    <footer class="bg-dark-steel mt-20">
+        <div class="container mx-auto px-6 py-12">
+            <div class="md:flex md:justify-between items-center text-center md:text-left">
+                <div class="mb-6 md:mb-0">
+                     <a href="#" aria-label="Strona główna Baltic Digital Institute">
+                        <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
+                            <rect x="78" y="19" width="8" height="17" fill="#FFFFFF"/>
+                            <rect y="16" width="86" height="3" fill="#64FFDA"/>
+                            <rect x="78" y="5" width="8" height="8" fill="#64FFDA"/>
+                        </svg>
+                    </a>
+                </div>
+                <div class="flex justify-center space-x-6 text-steel-gray">
+                    <a href="#rozwiazania" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
+                    <a href="#o-nas" class="hover:text-cyber-turq transition-colors">O Nas</a>
+                    <a href="#kontakt" class="hover:text-cyber-turq transition-colors">Kontakt</a>
+                </div>
+            </div>
+            <div class="mt-8 border-t border-gray-800 pt-8 text-center text-sm text-steel-gray">
+                <p>&copy; 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
+            </div>
         </div>
     </footer>
 
