--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <header class="container mx-auto px-6 py-6 flex justify-between items-center">
         <div>
-            <a href="#" aria-label="Strona główna Baltic Digital Institute">
+            <a href="index.html" aria-label="Strona główna Baltic Digital Institute">
                 <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
                     <text x="73" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">i</text>
@@ -43,10 +43,10 @@
             </a>
         </div>
         <nav class="hidden md:flex space-x-8 items-center">
-            <a href="#rozwiazania" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
-            <a href="#o-nas" class="hover:text-cyber-turq transition-colors">O Nas</a>
-            <a href="#kontakt" class="hover:text-cyber-turq transition-colors">Kontakt</a>
-            <a href="#kontakt" class="border border-cyber-turq text-cyber-turq px-4 py-2 rounded hover:bg-cyber-turq hover:text-baltic-navy transition-colors font-bold">
+            <a href="rozwiazania.html" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
+            <a href="o-nas.html" class="hover:text-cyber-turq transition-colors">O Nas</a>
+            <a href="kontakt.html" class="hover:text-cyber-turq transition-colors">Kontakt</a>
+            <a href="kontakt.html" class="border border-cyber-turq text-cyber-turq px-4 py-2 rounded hover:bg-cyber-turq hover:text-baltic-navy transition-colors font-bold">
                 Skonsultuj Projekt
             </a>
         </nav>
@@ -65,7 +65,7 @@
             Przesuwamy granice efektywnego wykorzystania AI i cyberbezpieczeństwa w regionie Morza Bałtyckiego poprzez nowatorskie badania, innowacje, wdrożenia i edukację.
         </p>
         <div class="mt-10">
-            <a href="#rozwiazania" class="bg-cyber-turq text-baltic-navy font-bold py-4 px-8 rounded text-lg hover:opacity-90 transition-opacity">
+            <a href="rozwiazania.html" class="bg-cyber-turq text-baltic-navy font-bold py-4 px-8 rounded text-lg hover:opacity-90 transition-opacity">
                 Poznaj Nasze Rozwiązania
             </a>
         </div>
@@ -82,19 +82,19 @@
                     <svg class="w-10 h-10 mb-6 text-cyber-turq" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 16v-2m0-8v-2m0 16V4m6 6l2-2m-2 12l2-2M6 18l-2-2m2-12L4 6m16 6h2M2 12H4m8 8a8 8 0 110-16 8 8 0 010 16z"></path></svg>
                     <h3 class="font-heading text-2xl font-bold mb-4">Wdrożenia Systemów AI</h3>
                     <p class="text-steel-gray mb-6">Projektujemy i wdrażamy zautomatyzowane systemy operacyjne oparte na agentach AI, które generują mierzalny wzrost i przewagę konkurencyjną.</p>
-                    <a href="#" class="font-bold text-cyber-turq hover:underline">Odkryj R-OaaS &rarr;</a>
+                    <a href="rozwiazania.html" class="font-bold text-cyber-turq hover:underline">Odkryj R-OaaS &rarr;</a>
                 </div>
                 <div class="bg-dark-steel p-8 rounded-lg border border-gray-800 hover:border-cyber-turq transition-colors">
                     <svg class="w-10 h-10 mb-6 text-cyber-turq" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path></svg>
                     <h3 class="font-heading text-2xl font-bold mb-4">Badania i Certyfikacja</h3>
                     <p class="text-steel-gray mb-6">Tworzymy standardy i weryfikujemy bezpieczeństwo technologii w naszym laboratorium, budując zaufanie do innowacji w regionie.</p>
-                    <a href="#" class="font-bold text-cyber-turq hover:underline">Dowiedz się więcej &rarr;</a>
+                    <a href="rozwiazania.html" class="font-bold text-cyber-turq hover:underline">Dowiedz się więcej &rarr;</a>
                 </div>
                 <div class="bg-dark-steel p-8 rounded-lg border border-gray-800 hover:border-cyber-turq transition-colors">
                     <svg class="w-10 h-10 mb-6 text-cyber-turq" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 14l9-5-9-5-9 5 9 5z"></path><path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222 4 2.222V20M1 12l5.373 2.986M17.627 14.986L23 12"></path></svg>
                     <h3 class="font-heading text-2xl font-bold mb-4">Edukacja i Kompetencje</h3>
                     <p class="text-steel-gray mb-6">Budujemy kompetencje przyszłości poprzez akredytowane szkolenia i programy grantowe, przygotowując kadry do pracy z AI.</p>
-                    <a href="#" class="font-bold text-cyber-turq hover:underline">Zobacz ofertę szkoleń &rarr;</a>
+                    <a href="rozwiazania.html" class="font-bold text-cyber-turq hover:underline">Zobacz ofertę szkoleń &rarr;</a>
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
                 Jesteśmy czymś więcej niż instytutem technologicznym. Naszą misją jest wykorzystywanie zaawansowanych technologii do rozwiązywania realnych problemów społecznych. Działamy w oparciu o głębokie, interdyscyplinarne przywództwo technologiczne i autentyczne zaangażowanie w budowanie regionalnej odporności cyfrowej.
             </p>
             <div class="mt-10">
-                <a href="#" class="border border-cyber-turq text-cyber-turq font-bold py-3 px-8 rounded text-lg hover:bg-cyber-turq hover:text-baltic-navy transition-colors">
+                <a href="o-nas.html" class="border border-cyber-turq text-cyber-turq font-bold py-3 px-8 rounded text-lg hover:bg-cyber-turq hover:text-baltic-navy transition-colors">
                     Poznaj Naszą Historię
                 </a>
             </div>
@@ -136,7 +136,7 @@
             <h2 class="font-heading text-3xl md:text-4xl font-bold">Gotowy na Transformację?</h2>
             <p class="mt-4 text-lg text-steel-gray">Skontaktuj się z nami, aby omówić, jak możemy wesprzeć Twoją organizację w podróży ku cyfrowej przyszłości.</p>
             <div class="mt-10">
-                <a href="#" class="bg-cyber-turq text-baltic-navy font-bold py-4 px-8 rounded text-lg hover:opacity-90 transition-opacity">
+                <a href="kontakt.html" class="bg-cyber-turq text-baltic-navy font-bold py-4 px-8 rounded text-lg hover:opacity-90 transition-opacity">
                     Skontaktuj się z Nami
                 </a>
             </div>
@@ -147,7 +147,7 @@
         <div class="container mx-auto px-6 py-12">
             <div class="md:flex md:justify-between items-center text-center md:text-left">
                 <div class="mb-6 md:mb-0">
-                     <a href="#" aria-label="Strona główna Baltic Digital Institute">
+                     <a href="index.html" aria-label="Strona główna Baltic Digital Institute">
                         <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
                             <text x="73" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">i</text>
@@ -157,9 +157,9 @@
                     </a>
                 </div>
                 <div class="flex justify-center space-x-6 text-steel-gray">
-                    <a href="#rozwiazania" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
-                    <a href="#o-nas" class="hover:text-cyber-turq transition-colors">O Nas</a>
-                    <a href="#kontakt" class="hover:text-cyber-turq transition-colors">Kontakt</a>
+                    <a href="rozwiazania.html" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
+                    <a href="o-nas.html" class="hover:text-cyber-turq transition-colors">O Nas</a>
+                    <a href="kontakt.html" class="hover:text-cyber-turq transition-colors">Kontakt</a>
                 </div>
             </div>
             <div class="mt-8 border-t border-gray-800 pt-8 text-center text-sm text-steel-gray">
