--- a/o-nas.html
+++ b/o-nas.html
@@ -22,7 +22,7 @@
                     },
                     fontFamily: {
                         sans: ['Lato', 'sans-serif'],
-                        heading:,
+                        heading:'Geist Sans', 'sans-serif'],
                     }
                 }
             }
