--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         'white': '#FFFFFF',
                     },
                     fontFamily: {
-                        sans: ['Lato', 'sans-serif'],
-                        heading:'Geist Sans', 'sans-serif'];
+                        sans: 'Lato', 'sans-serif',
+                        heading:'Geist Sans', 'sans-serif';
                     }
                 }
             }
