--- a/o-nas.html
+++ b/o-nas.html
@@ -1,122 +1,82 @@
 <!DOCTYPE html>
-<html lang="pl" class="scroll-smooth">
+<html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O Nas - Baltic Digital Institute</title>
-    <meta name="description" content="Poznaj naszą misję, wizję i przywództwo technologiczne. Dowiedz się, jak budujemy cyfrową odporność w regionie Morza Bałtyckiego.">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geist+Sans:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'baltic-navy': '#0A192F',
-                        'dark-steel': '#112240',
-                        'cyber-turq': '#64FFDA',
-                        'steel-gray': '#8892B0',
-                        'white': '#FFFFFF',
-                    },
-                    fontFamily: {
-                        sans: 'Lato', 'sans-serif',
-                        heading:'Geist Sans', 'sans-serif';
-                    }
-                }
-            }
-        }
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>O Nas - Baltic Digital Institute</title>
+  <link href="dist/output.css" rel="stylesheet">
 </head>
 <body class="antialiased bg-baltic-navy text-white font-sans">
 
-    <header class="container mx-auto px-6 py-6 flex justify-between items-center">
-        <div>
-            <a href="index.html" aria-label="Strona główna Baltic Digital Institute">
-                <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
-                    <text x="73" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">i</text>
-                    <rect y="16" width="86" height="3" fill="#64FFDA"/>
-                    <rect x="78" y="5" width="8" height="8" fill="#64FFDA"/>
-                </svg>
-            </a>
-        </div>
-        <nav class="hidden md:flex space-x-8 items-center">
-            <a href="rozwiazania.html" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
-            <a href="o-nas.html" class="text-cyber-turq">O Nas</a>
-            <a href="kontakt.html" class="hover:text-cyber-turq transition-colors">Kontakt</a>
-            <a href="kontakt.html" class="border border-cyber-turq text-cyber-turq px-4 py-2 rounded hover:bg-cyber-turq hover:text-baltic-navy transition-colors font-bold">
-                Skonsultuj Projekt
-            </a>
-        </nav>
-        <div class="md:hidden">
-            <button class="text-white focus:outline-none">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
-            </button>
-        </div>
-    </header>
+  <!-- HEADER -->
+  <header class="bg-dark-steel shadow-md fixed w-full z-20">
+    <div class="max-w-7xl mx-auto px-6 flex justify-between items-center h-16">
+      <a href="index.html" class="flex items-center font-heading text-white text-2xl font-bold">BDi</a>
+      <nav class="hidden md:flex space-x-8 items-center">
+        <a href="rozwiazania.html" class="hover:text-cyber-turq transition">Rozwiązania</a>
+        <a href="o-nas.html" class="text-cyber-turq">O Nas</a>
+        <a href="kontakt.html" class="hover:text-cyber-turq transition">Kontakt</a>
+      </nav>
+      <!-- Hamburger -->
+      <div class="md:hidden">
+        <button id="menu-button" class="relative w-8 h-8 flex flex-col justify-between items-center group">
+          <span class="block h-1 w-full bg-white rounded transition"></span>
+          <span class="block h-1 w-full bg-white rounded transition"></span>
+          <span class="block h-1 w-full bg-white rounded transition"></span>
+        </button>
+      </div>
+    </div>
+    <!-- MOBILE MENU -->
+    <div id="mobile-menu" class="overflow-hidden max-h-0 opacity-0 transition-all duration-500 ease-in-out md:hidden bg-dark-steel">
+      <a href="rozwiazania.html" class="block px-6 py-3 text-white hover:bg-baltic-navy">Rozwiązania</a>
+      <a href="o-nas.html" class="block px-6 py-3 text-cyber-turq font-bold">O Nas</a>
+      <a href="kontakt.html" class="block px-6 py-3 text-white hover:bg-baltic-navy">Kontakt</a>
+    </div>
+  </header>
 
-    <main class="container mx-auto px-6 py-20">
-        <section class="text-center max-w-4xl mx-auto mb-24">
-            <h1 class="font-heading text-4xl md:text-5xl font-black">Nasza Misja i Wizja</h1>
-            <p class="mt-6 text-lg text-steel-gray">Fundament, który napędza wszystkie nasze działania.</p>
-        </section>
+  <!-- MAIN -->
+  <main class="pt-24 container mx-auto px-6">
+    <section class="text-center max-w-4xl mx-auto mb-20">
+      <h1 class="font-heading text-4xl md:text-5xl font-black">Kim jesteśmy?</h1>
+      <p class="mt-6 text-lg text-steel-gray">Baltic Digital Institute to zespół ekspertów, którzy łączą sztuczną inteligencję i cyberbezpieczeństwo, by wspierać transformację cyfrową Europy.</p>
+    </section>
 
-        <section class="max-w-4xl mx-auto mb-20">
-            <h2 class="font-heading text-2xl font-bold text-cyber-turq mb-4">Misja</h2>
-            <p class="text-lg md:text-xl text-steel-gray leading-relaxed">Przesuwamy granice efektywnego wykorzystania sztucznej inteligencji i cyberbezpieczeństwa w regionie Morza Bałtyckiego poprzez nowatorskie badania, innowacje, wdrożenia i edukację, kształtując bezpieczną i etycznie ugruntowaną cyfrową przyszłość dla społeczeństwa i przemysłu.</p>
-        </section>
+    <section class="grid md:grid-cols-3 gap-12 max-w-6xl mx-auto">
+      <div class="bg-dark-steel p-6 rounded-lg">
+        <h2 class="font-heading text-2xl font-bold mb-4">Nasza Misja</h2>
+        <p class="text-steel-gray">Wzmacniamy odporność cyfrową organizacji i tworzymy rozwiązania oparte na AI, które służą społeczeństwu i gospodarce.</p>
+      </div>
+      <div class="bg-dark-steel p-6 rounded-lg">
+        <h2 class="font-heading text-2xl font-bold mb-4">Nasza Wizja</h2>
+        <p class="text-steel-gray">Być wiodącym hubem innowacji cyfrowych w regionie Morza Bałtyckiego.</p>
+      </div>
+      <div class="bg-dark-steel p-6 rounded-lg">
+        <h2 class="font-heading text-2xl font-bold mb-4">Nasze Wartości</h2>
+        <p class="text-steel-gray">Transparentność, bezpieczeństwo, odpowiedzialność technologiczna.</p>
+      </div>
+    </section>
+  </main>
 
-        <section class="max-w-4xl mx-auto mb-24">
-            <h2 class="font-heading text-2xl font-bold text-cyber-turq mb-4">Wizja</h2>
-            <p class="text-lg md:text-xl text-steel-gray leading-relaxed">Chcemy być wiodącym katalizatorem transformacyjnych rozwiązań w zakresie AI i Cyberbezpieczeństwa w regionie Morza Bałtyckiego, rozpoznawalnym globalnie dzięki doskonałości badawczej, edukacyjnej oraz zaangażowaniu w odpowiedzialny postęp technologiczny, który wzmacnia społeczności i buduje regionalną odporność.</p>
-        </section>
+  <!-- FOOTER -->
+  <footer class="bg-dark-steel mt-20">
+    <div class="max-w-7xl mx-auto px-6 py-12 text-center text-steel-gray text-sm">
+      <p>&copy; 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
+    </div>
+  </footer>
 
-        <section class="py-20 bg-dark-steel -mx-6 px-6">
-            <div class="container mx-auto max-w-4xl">
-                <h2 class="font-heading text-3xl md:text-4xl font-bold text-center mb-12">Przywództwo Technologiczne</h2>
-                <div class="text-lg text-steel-gray leading-relaxed space-y-6">
-                    <p>Na czele Baltic Digital Institute stoi Prezes Krzysztof Rek – architekt systemów z udokumentowanym doświadczeniem w transformacji cyfrowej globalnych korporacji i zarządzaniu złożonymi projektami technologicznymi.</p>
-                    <p>Siłą Instytutu jest interdyscyplinarna Rada Programowa, zrzeszająca ekspertów z dziedzin data science, sztucznej inteligencji i nauk o informacji. To połączenie praktycznego doświadczenia biznesowego z rygorem naukowym zapewnia solidne, merytoryczne zaplecze dla wszystkich naszych wdrożeń, badań i programów edukacyjnych.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="py-24">
-            <div class="container mx-auto max-w-4xl text-center">
-                <h2 class="font-heading text-3xl md:text-4xl font-bold">Ład Korporacyjny i Zobowiązanie do Jakości</h2>
-                <p class="mt-6 text-lg text-steel-gray leading-relaxed">
-                    Działamy w oparciu o Zintegrowany System Zarządzania (ZSZ), zgodny z międzynarodowymi normami ISO. Wdrożone polityki i procedury, w tym rygorystyczna Polityka Bezpieczeństwa Informacji, stanowią fundament, który gwarantuje najwyższe standardy bezpieczeństwa, powtarzalności i niezawodności naszych wdrożeń. To nasza obietnica jakości i profesjonalizmu.
-                </p>
-            </div>
-        </section>
-    </main>
-
-    <footer class="bg-dark-steel">
-        <div class="container mx-auto px-6 py-12">
-            <div class="md:flex md:justify-between items-center text-center md:text-left">
-                <div class="mb-6 md:mb-0">
-                     <a href="index.html" aria-label="Strona główna Baltic Digital Institute">
-                        <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
-                            <text x="73" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">i</text>
-                            <rect y="16" width="86" height="3" fill="#64FFDA"/>
-                            <rect x="78" y="5" width="8" height="8" fill="#64FFDA"/>
-                        </svg>
-                    </a>
-                </div>
-                <div class="flex justify-center space-x-6 text-steel-gray">
-                    <a href="rozwiazania.html" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
-                    <a href="o-nas.html" class="text-cyber-turq">O Nas</a>
-                    <a href="kontakt.html" class="hover:text-cyber-turq transition-colors">Kontakt</a>
-                </div>
-            </div>
-            <div class="mt-8 border-t border-gray-800 pt-8 text-center text-sm text-steel-gray">
-                <p>&copy; 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
-            </div>
-        </div>
-    </footer>
-
+  <script>
+    const menuButton = document.getElementById("menu-button");
+    const mobileMenu = document.getElementById("mobile-menu");
+    menuButton.addEventListener("click", () => {
+      mobileMenu.classList.toggle("max-h-96");
+      mobileMenu.classList.toggle("opacity-100");
+      menuButton.classList.toggle("open");
+    });
+  </script>
+  <style>
+    #menu-button.open span:nth-child(1) { transform: rotate(45deg) translate(5px, 5px); }
+    #menu-button.open span:nth-child(2) { opacity: 0; }
+    #menu-button.open span:nth-child(3) { transform: rotate(-45deg) translate(5px, -5px); }
+  </style>
 </body>
 </html>
